--- a/sql-challenge_sqlalchemy.ipynb
+++ b/sql-challenge_sqlalchemy.ipynb
@@ -6,108 +6,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import dependencies\n",
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "from config import db_user, db_password\n",
     "import psycopg2\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# creating engine to postgres server\n",
     "engine = create_engine(f\"postgresql://{db_user}:{db_password}@localhost/sql_challenge\")\n",
     "\n",
+    "# connecting the engine to notebook\n",
     "conn = engine.connect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>emp_no</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10001</td>\n",
-       "      <td>60117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10002</td>\n",
-       "      <td>65828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10003</td>\n",
-       "      <td>40006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10004</td>\n",
-       "      <td>40054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10005</td>\n",
-       "      <td>78228</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   emp_no  salary\n",
-       "0   10001   60117\n",
-       "1   10002   65828\n",
-       "2   10003   40006\n",
-       "3   10004   40054\n",
-       "4   10005   78228"
+       "0         60117\n",
+       "1         65828\n",
+       "2         40006\n",
+       "3         40054\n",
+       "4         78228\n",
+       "          ...  \n",
+       "300019    40000\n",
+       "300020    58058\n",
+       "300021    49597\n",
+       "300022    40000\n",
+       "300023    63707\n",
+       "Name: salary, Length: 300024, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# querying companies salaries\n",
     "salaries = pd.read_sql(\"SELECT * FROM salaries\", conn)\n",
-    "salaries.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x = salaries[\"salary\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +81,181 @@
     "plt.grid()\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300019</th>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300020</th>\n",
+       "      <td>58058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300021</th>\n",
+       "      <td>49597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300022</th>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300023</th>\n",
+       "      <td>63707</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300024 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        salary\n",
+       "0        60117\n",
+       "1        65828\n",
+       "2        40006\n",
+       "3        40054\n",
+       "4        78228\n",
+       "...        ...\n",
+       "300019   40000\n",
+       "300020   58058\n",
+       "300021   49597\n",
+       "300022   40000\n",
+       "300023   63707\n",
+       "\n",
+       "[300024 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = p'''\n",
+    "SELECT t.title,s.salary\n",
+    "FROM \"Salaries\" AS s\n",
+    "INNER JOIN \"Titles\" AS t\n",
+    "ON t.emp_no = s.emp_no;\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>499942</td>\n",
+       "      <td>e0004</td>\n",
+       "      <td>1963-01-10</td>\n",
+       "      <td>April</td>\n",
+       "      <td>Foolsday</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1997-02-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no emp_title_id  birth_date first_name last_name sex   hire_date\n",
+       "0  499942        e0004  1963-01-10      April  Foolsday   F  1997-02-10"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee_id_query = pd.read_sql (\"select * from employees where emp_no = '499942';\", conn)\n",
+    "employee_id_query"
    ]
   },
   {
