--- a/sql-challenge_sqlalchemy.ipynb
+++ b/sql-challenge_sqlalchemy.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -109,88 +109,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>titles</th>\n",
        "      <th>salary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>60117</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>48973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65828</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>40000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>40006</td>\n",
+       "      <td>Technique Leader</td>\n",
+       "      <td>43548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>40054</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>78228</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>40000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300019</th>\n",
+       "      <td>Staff</td>\n",
        "      <td>40000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300020</th>\n",
-       "      <td>58058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300021</th>\n",
-       "      <td>49597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>300022</th>\n",
+       "      <td>Technique Leader</td>\n",
        "      <td>40000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>300021</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>59703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300022</th>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>48038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>300023</th>\n",
-       "      <td>63707</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>40000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>300024 rows × 1 columns</p>\n",
+       "<p>300024 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        salary\n",
-       "0        60117\n",
-       "1        65828\n",
-       "2        40006\n",
-       "3        40054\n",
-       "4        78228\n",
-       "...        ...\n",
-       "300019   40000\n",
-       "300020   58058\n",
-       "300021   49597\n",
-       "300022   40000\n",
-       "300023   63707\n",
+       "                  titles  salary\n",
+       "0               Engineer   48973\n",
+       "1        Senior Engineer   40000\n",
+       "2       Technique Leader   43548\n",
+       "3                  Staff   63377\n",
+       "4        Senior Engineer   40000\n",
+       "...                  ...     ...\n",
+       "300019             Staff   40000\n",
+       "300020  Technique Leader   40000\n",
+       "300021   Senior Engineer   59703\n",
+       "300022   Senior Engineer   48038\n",
+       "300023   Senior Engineer   40000\n",
        "\n",
-       "[300024 rows x 1 columns]"
+       "[300024 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = p'''\n",
-    "SELECT t.title,s.salary\n",
-    "FROM \"Salaries\" AS s\n",
-    "INNER JOIN \"Titles\" AS t\n",
-    "ON t.emp_no = s.emp_no;\n",
-    "'''\n"
+    "titles_salaries_query = pd.read_sql(\"select titles.titles, salaries.salary from employees join titles on employees.emp_title_id=titles.emp_title_id join salaries on employees.emp_no=salaries.emp_no\", conn)\n",
+    "titles_salaries_query\n",
+    "\n"
    ]
   },
   {
